# ChessRobot

./: .CmakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
assets/data/: games.txt
assets/images/: read-this.txt
headers/: assetpool.hpp  boardinput.hpp  boardui.hpp  button.hpp  component.hpp  gamemanager.hpp  gui.hpp  label.hpp  motorcontroller.hpp  mouseinput.hpp  openingbook.hpp  opponent.hpp  renderobject.hpp  spritesheet.hpp  stockfish.hpp  utility.hpp  window.hpp
src/: assetpool.cpp  boardinput.cpp  boardui.cpp  button.cpp  gamemanager.cpp  gui.cpp  label.cpp  main.cpp  motorcontroller.cpp  mouseinput.cpp  openingbook.cpp  opponent.cpp  renderobject.cpp  seriallib.cpp  spritesheet.cpp  stockfish.cpp  utility.cpp  window.cpp
